src/main/kubernetes/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: teste-app
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: ailtonmsj/hello-world-quarkus:1.0.0
        name: hello
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128M"
          limits:
            cpu: "200m"
            memory: "256M"
        ports:
          - name: http-port
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: http-port
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 4
