src/main/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: teste-app
  labels:
    app: hello
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: hello
