src/main/kubernetes/05-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: teste-app
spec:
  gateways:
  - hello-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /hello
      method:
        exact: GET
    rewrite:
      uri: /hello
    route:
    - destination:
        host: hello
        port:
          number: 8080
